Try to fix image size on mobile and nav directional layout

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -529,7 +529,7 @@
   }
 
   .thumb-sm-0 {
-    width: 100%;
+    width: 64px;
     aspect-ratio: 1;
     overflow: hidden;
     border-radius: 2px;
